--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next": "^15.0.2",
+    "react": "^19.0.0-rc-33c7bd9a-20241104",
+    "react-dom": "^19.0.0-rc-33c7bd9a-20241104",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.2",
@@ -36,7 +36,7 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "^15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
