--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.52.1",
     "@types/react-redux": "^7.1.33",
@@ -24,8 +28,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
     "next": "^15.0.2",
-    "react": "^19.0.0-rc-33c7bd9a-20241104",
-    "react-dom": "^19.0.0-rc-33c7bd9a-20241104",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.2",
