--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.427.0",
     "next": "^15.0.2",
     "react": "^18.2.0",
